# spectral_ssm_

./: .gitignore  .slurm-56823177.out.swp  README.md  __init__.py  example.py  predict.py  predict_stu_iter.py  prune_obs_data.py  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  testt.ipynb  torch_example.py  train.py  training_details_20240603152938.txt  training_details_20240604085758.txt  training_details_20240606123622.txt  training_details_20240606132304.txt  training_details_20240606135500.txt  training_details_20240606141939.txt  training_details_20240607071029.txt  training_details_20240607072501.txt  training_details_20240607073804.txt  training_details_20240607074824.txt  training_details_20240607101808.txt  training_details_20240607125536.txt  training_details_20240607164437.txt  training_details_20240607164654.txt  training_details_20240607165322.txt  training_details_20240607170437.txt  training_details_20240607172654.txt  training_details_20240607175330.txt  training_details_20240607193659.txt  training_details_sssm_2024-06-24-09-30-09.txt  training_details_sssm_2024-06-24-09-34-59.txt  training_details_sssm_2024-06-24-10-16-20.txt  training_details_sssm_20240621173623.txt  training_details_stu_20240612204040.txt  (+25 more)
deepmind/: pyvenv.cfg
losses/: loss_ant.py  loss_cheetah.py  loss_walker.py
mamba/: model.py
physics_checkpoints/: Ant-v1-checkpoint-step120-20240607083859.pt  Ant-v1-checkpoint-step120-20240607092041.pt  Ant-v1-checkpoint-step150-20240607084523.pt  Ant-v1-checkpoint-step150-20240607092705.pt  Ant-v1-checkpoint-step150-20240607100840.pt  Ant-v1-checkpoint-step180-20240607093328.pt  Ant-v1-checkpoint-step180-20240607101503.pt  Ant-v1-checkpoint-step30-20240607081947.pt  Ant-v1-checkpoint-step30-20240607090129.pt  Ant-v1-checkpoint-step30-20240607094308.pt  Ant-v1-checkpoint-step60-20240607082610.pt  Ant-v1-checkpoint-step60-20240607094931.pt  Ant-v1-checkpoint-step90-20240607083235.pt  Ant-v1-checkpoint-step90-20240607095554.pt  HalfCheetah-v1-checkpoint-step150-20240607074526.pt  checkpoint-step0-20240606144704.pt  checkpoint-step1-20240606123159.pt  checkpoint-step120-20240607073024.pt  checkpoint-step120-20240607073343.pt  checkpoint-step120-20240607073703.pt  checkpoint-step150-20240607073058.pt  checkpoint-step150-20240607073418.pt  checkpoint-step150-20240607073737.pt  checkpoint-step180-20240607072445.pt  checkpoint-step2-20240606123327.pt  checkpoint-step3-20240606123454.pt  checkpoint-step30-20240607072808.pt  checkpoint-step30-20240607073200.pt  checkpoint-step30-20240607073520.pt  checkpoint-step4-20240606123622.pt  checkpoint-step60-20240607072915.pt  checkpoint-step60-20240607073234.pt  checkpoint-step60-20240607073554.pt  checkpoint-step90-20240607072949.pt  checkpoint-step90-20240607073309.pt  checkpoint-step90-20240607073628.pt
physics_checkpoints_ant/: Ant-v1-checkpoint-step120-20240607110102.pt  Ant-v1-checkpoint-step120-20240607114904.pt  Ant-v1-checkpoint-step150-20240607110826.pt  Ant-v1-checkpoint-step150-20240607115626.pt  Ant-v1-checkpoint-step150-20240607124444.pt  Ant-v1-checkpoint-step180-20240607120346.pt  Ant-v1-checkpoint-step180-20240607125206.pt  Ant-v1-checkpoint-step30-20240607103850.pt  Ant-v1-checkpoint-step30-20240607112656.pt  Ant-v1-checkpoint-step30-20240607121515.pt  Ant-v1-checkpoint-step60-20240607104614.pt  Ant-v1-checkpoint-step60-20240607122238.pt  Ant-v1-checkpoint-step90-20240607105338.pt  Ant-v1-checkpoint-step90-20240607123000.pt
physics_checkpoints_ant_small/: Ant-v1-checkpoint-step30-20240607163844.pt  Ant-v1-checkpoint-step60-20240607164123.pt  Ant-v1-checkpoint-step90-20240607164402.pt
plots/: plot.py  plots.py  sssm_val_losses.npy  sssm_val_time_steps.npy  transformer_grad_norms.npy  transformer_train_losses.npy  transformer_val_losses.npy  transformer_val_time_steps.npy
results/: plot.py
spectral_ssm/: __init__.py  benchmark.py  cifar10.py  data_insights.py  experiment.py  input_data.npy  input_data_eval.npy  loss_ant.py  loss_cheetah.py  loss_walker.py  loss_walker2d.py  model.py  mujoco.py  optimizer.py  physics_data.py  stu_utils.py  synthetic.py  target_data.npy  target_data_eval.npy  torch_cifar10.py  torch_experiment.py  torch_model.py  torch_optimizer.py  torch_stu_utils.py  torch_utils.py  utils.py
stu/: experiment.py  model.py  optimizer.py  stu_utils.py  train.py  train_old.py  train_stu.py
tests/: compute_ar_x_preds.py  compute_x_tilde.py  conv.py  (+4 more)
(+395 files in other folders)
