[tool.poetry]
name = "spectral_ssm"
version = "1.0"
description = "Dependency manager Google DeepMind Spectral State Space model"
authors = ["Yagiz Devre", "Evan Dogariu", "Chiara von Gerlach", "Isabel Liu", "Windsor Nguyen", "Dwaipayan Saha"]
license = "Apache 2.0"
homepage = "https://arxiv.org/abs/2312.06837"
repository = "https://github.com/windsornguyen/spectral_ssm"
keywords = ["spectral state space model"]

[tool.poetry.dependencies]
python = "^3.9, <=3.11.9"
torch = "2.2.2"
torchvision = "0.17.2"
typing-extensions = "4.9.0"
pyyaml = "6.0.1"
pillow = "10.2.0"
numpy = "1.26.4"
sympy = "1.12"
tqdm = "^4.66.2"

[tool.poetry.dev-dependencies]
# See `ruff help` for more on Ruff's top-level commands.
ruff = "^0.3.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 80
indent-width = 4

# Assuming Python 3.11+.
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"  # Enforce double quotes for docstrings
inline-quotes = "single"     # Enforce single quotes for inline strings

[tool.ruff.format]
quote-style = "single"       # Default to single quotes for auto-formatting

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
